dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolabajafe
spec:
  selector:
    matchLabels:
      app: kolabajafe
  template:
    metadata:
      labels:
        app: kolabajafe
    spec:
      containers:
      - name: kolabajafe
        image: edbfort/kolab-aja-fe:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
