dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: kolabajabe
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30001
  type: NodePort
